@@ -14,6 +14,8 @@ Legend:
 + Miscellaneous: Added button to export key bindings
 + Add the ability to choose the scale factor (relative to the screen size) for
   the auto-fit zoom
+* UI: Use a more native look and feel for the options dialog tree
+* UI: Use the new styled radio bullet for menu's items
 * Updated FFmpeg (n0.8-17442-g7d66bc7)
 * Updated Little CMS to v2.4 (git e4624c8)
 * Updated Logitech SDK to v3.01 (driver 8.00.100)
